--- a/views/login.hbs
+++ b/views/login.hbs
@@ -12,10 +12,12 @@
 </head>
 <body>
     <script src="\js\ourscript.js"></script>
+    <img id="logo" class="center" src="img/image.png">
 
     <div id="login" class="ui input">
-        <input type="text" placeholder="Login...">
+        <input  type="text" placeholder="Login...">
     </div>
+    
 </body>
 
 </html>
