--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,5 +7,14 @@ a {
   color: #00B7FF;
 }
 #login {
-  align-items: center;
+  padding-left: 41vw;
+  padding-top: 40px;
+  text-align: center;
+}
+#logo {
+  margin-left: auto;
+  margin-right: auto;
+  width: 25%;
+  display: block;
+  
 }
