--- a/views/home.hbs
+++ b/views/home.hbs
@@ -16,12 +16,15 @@
 <body>
   <div class="ui left demo vertical inverted visible  sidebar labeled icon menu">
     <a class="item">
+      <img  id="logo" class="center" src="img/image.png" height: "20px" width:"20px">
+    </a>
+    <a class="item">
       <i class="home icon"></i>
       Home
     </a>
     <a class="item">
       <i class="block layout icon"></i>
-      MyCLoset
+      MyCloset
     </a>
     <a class="item">
       <i class="smile icon"></i>
