--- a/views/home.hbs
+++ b/views/home.hbs
@@ -14,9 +14,9 @@
 </head>
 
 <body>
-  <div class="ui left demo vertical inverted visible  sidebar labeled icon menu">
+  <div id="sidebar" class="ui left demo vertical inverted visible  sidebar labeled icon menu">
     <a class="item">
-      <img  id="logo" class="center" src="img/image.png" height: "20px" width:"20px">
+      <img  id="small_logo" class="center" src="img/image.png">
     </a>
     <a class="item">
       <i class="home icon"></i>
@@ -24,7 +24,7 @@
     </a>
     <a class="item">
       <i class="block layout icon"></i>
-      MyCloset
+      My Closet
     </a>
     <a class="item">
       <i class="smile icon"></i>
