--- a/views/login.hbs
+++ b/views/login.hbs
@@ -10,14 +10,18 @@
     <link rel='stylesheet' href='/css/style.css' />
     <title>Login</title>
 </head>
-<body>
-    <script src="\js\ourscript.js"></script>
-    <img id="logo" class="center" src="img/image.png">
 
-    <div id="login" class="ui input">
-        <input  type="text" placeholder="Login...">
+<body>
+    <div class="grid">
+        <script src="\js\ourscript.js"></script>
+        <img id="logo" class="center" src="img/image.png">
+
+        <div id="login" class="ui center input">
+            <input type="text" placeholder="Login...">
+        </div>
+        <a href="home"><button id="login_button" class="ui black button">Login</button></a>
     </div>
-    
+
 </body>
 
 </html>
