--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,15 +6,36 @@ body {
 a {
   color: #00B7FF;
 }
-#login {
-  padding-left: 41vw;
-  padding-top: 40px;
-  text-align: center;
-}
+ #login {
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+  width: 25%;
+  padding-top: 2%;
+  padding-bottom: 2%;
+} 
 #logo {
   margin-left: auto;
   margin-right: auto;
   width: 25%;
   display: block;
-  
+}
+.grid{
+  display: grid;
+  text-align: center
+}
+#login_button{
+  width: 100px;
+  margin-left: auto;
+  margin-right:auto;
+  width:100px;
+}
+#sidebar{
+  width: 12%;
+}
+#small_logo{
+  height: 70%;
+  width: 70%;
+  margin-right:auto;
+  margin-left:auto;
 }
