--- a/views/celebfits.hbs
+++ b/views/celebfits.hbs
@@ -19,3 +19,11 @@
     Celeb Fits
   </a>
 </div>
+<div id="names">
+    <h1>A$VP Rocky</h1>
+    <h1>Rihanna</h1>
+</div>
+<div id="celebs">
+    <img src="img/asap.jpg" alt="Pic of A$VP Rocky" height="80%" width="80%">
+    <img src="img/riri.jpg" alt="Pic of RiRi" height="80%" width="80%">
+</div>
