--- a/public/css/style.css
+++ b/public/css/style.css
@@ -21,3 +21,34 @@ a {
   display: block;
   
 }
+#sidebar{
+  width: 12%;
+}
+#home_logo{
+  margin-right: auto;
+  margin-left: auto;
+  height: 60%;
+  width: 60%;
+}
+#celebs{
+  display:grid;
+  grid-template-columns:auto auto;
+  height: 100vh;
+  width: 90vw;
+}
+#celebs img{
+  justify-self: center;
+}
+#names{
+  display:grid;
+  grid-template-columns:auto auto;
+  height: 5vh;
+  width: 90vw;
+}
+
+#names h1{
+  margin-top: 0;
+  margin-bottom:0;
+  justify-self: center;
+}
+
