login works again

--- a/views/login.hbs
+++ b/views/login.hbs
@@ -4,7 +4,8 @@
   }
 </style>
 
-
+<img class="ui centered medium image" src="/img/image.png">
+<div class="ui hidden divider"></div>
 <div class="ui middle aligned center aligned grid">
   <div class="column">
     <h2 class="ui image header">
