--- a/views/celebfits.hbs
+++ b/views/celebfits.hbs
@@ -2,13 +2,13 @@
   <a class="item">
     <img id="home_logo" class="center" src="img/image.png" height: "20px" width:"20px">
   </a>
-  <a class="item">
+  <a href="/home" class="item">
     <i class="home icon"></i>
     Home
   </a>
-  <a class="item">
+  <a href="/mycloset" class="item">
     <i class="block layout icon"></i>
-    MyCloset
+    My Closet
   </a>
   <a class="item">
     <i class="smile icon"></i>
