--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,21 +1,28 @@
-<div id = "sidebar" class="ui left demo vertical inverted visible  sidebar labeled icon menu">
+<div id="sidebar" class="ui left demo vertical inverted visible  sidebar labeled icon menu">
   <a class="item">
     <img id="home_logo" class="center" src="img/image.png" height: "20px" width:"20px">
   </a>
-  <a class="item">
+  <a href="/home" class="item">
     <i class="home icon"></i>
     Home
   </a>
-  <a class="item">
+  <a href = "/mycloset"class="item">
     <i class="block layout icon"></i>
-    MyCloset
+    My Closet
   </a>
   <a class="item">
     <i class="smile icon"></i>
     Fits
   </a>
-  <a href="/celebfits"class="item">
+  <a href="/celebfits" class="item">
     <i class="fits"></i>
     Celeb Fits
   </a>
+</div>
+
+<div class="ui middle aligned center aligned grid">
+  <button class="ui inverted massive violet icon button" id="addFitsButton">
+    <i class="plus icon"></i>
+    Add Fits
+  </button>
 </div>
