--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -11,10 +11,15 @@
   <link rel='stylesheet' href='/css/style.css' />
 </head>
 
-<body>
-  <div class="ui hidden divider"></div>
-  <div class="ui container">
+<style>
+  body {
+    background-image: url("/img/colorbackground.png");
+    background-size: cover;
+    background-attachment: fixed;
+  }
+</style>
 
+<body>
     {{{body}}}
   </div>
 </body>
