--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,40 +1,41 @@
 <style>
-  .column {
-    max-width: 450px;
-  }
+    .column {
+        max-width: 450px;
+    }
 </style>
 
+<div id="wholelogin">
+    <div class="ui middle aligned center aligned grid">
+        <div class="column">
+            <h2 class="ui image header">
+                <div class="content">
+                    Log-in to your account
+                </div>
+            </h2>
+            <form class="ui large form" action="/users/login" method="post">
+                <div class="ui segment">
+                    <div class="field">
+                        <div class="ui left icon input">
+                            <i class="user icon"></i>
+                            <input type="text" name="username" placeholder="username">
+                        </div>
+                    </div>
+                    <div class="field">
+                        <div class="ui left icon input">
+                            <i class="lock icon"></i>
+                            <input type="password" name="password" placeholder="password">
+                        </div>
+                    </div>
+                    <button class="ui fluid large black button" type="submit">Login</button>
+                </div>
 
-<div class="ui middle aligned center aligned grid">
-  <div class="column">
-    <h2 class="ui image header">
-      <div class="content">
-        Log-in to your account
-      </div>
-    </h2>
-    <form class="ui large form" action="/users/login" method="post">
-      <div class="ui segment">
-        <div class="field">
-          <div class="ui left icon input">
-            <i class="user icon"></i>
-            <input type="text" name="username" placeholder="username">
-          </div>
+                <div class="ui error message"></div>
+
+            </form>
+
+            <div class="ui message">
+                <a href="/users/register">Register Here</a> if it's your first time.
+            </div>
         </div>
-        <div class="field">
-          <div class="ui left icon input">
-            <i class="lock icon"></i>
-            <input type="password" name="password" placeholder="password">
-          </div>
-        </div>
-        <button class="ui fluid large black button" type="submit">Login</button>
-      </div>
-
-      <div class="ui error message"></div>
-
-    </form>
-
-    <div class="ui message">
-      <a href="/users/register">Register Here</a> if it's your first time.
     </div>
-  </div>
 </div>
