--- a/views/home.hbs
+++ b/views/home.hbs
@@ -18,5 +18,7 @@
     <i class="fits"></i>
     Celeb Fits
   </a>
+  Hello
 </div>
-<h1> Welcome {{{req.body.username}}}</h1>
+<div> <h1> Welcome {{{req.session.username }}}</h1>
+</div>
