--- a/views/login.hbs
+++ b/views/login.hbs
@@ -5,6 +5,8 @@
 </style>
 
 <div id="wholelogin">
+    <img class="ui centered medium image" src="/img/image.png">
+    <div class="ui hidden divider"></div>
     <div class="ui middle aligned center aligned grid">
         <div class="column">
             <h2 class="ui image header">
