--- a/views/fits.hbs
+++ b/views/fits.hbs
@@ -1,3 +1,4 @@
+{{{body}}}
 <div id = "sidebar" class="ui left demo vertical inverted visible  sidebar labeled icon menu">
   <a class="item">
     <img id="home_logo" class="center" src="img/image.png" height: "20px" width:"20px">
@@ -18,12 +19,4 @@
     <i class="diamond icon" class="fits"></i>
     Celeb Fits
   </a>
-</div>
-<div id="names">
-    <h1>A$VP Rocky</h1>
-    <h1>Rihanna</h1>
-</div>
-<div id="celebs">
-    <img src="img/asap.jpg" alt="Pic of A$VP Rocky" height="80%" width="80%">
-    <img src="img/riri.jpg" alt="Pic of RiRi" height="80%" width="80%">
 </div>
