--- a/views/home.hbs
+++ b/views/home.hbs
@@ -10,20 +10,24 @@
     <i class="block layout icon"></i>
     My Closet
   </a>
-  <a class="item">
-    <i class="smile icon"></i>
+  <a href="/fits" class="item">
+    <i class="theme icon"></i>
     Fits
   </a>
   <a href="/celebfits" class="item">
-    <i class="fits"></i>
+    <i class="diamond icon" class="fits"></i>
     Celeb Fits
   </a>
-  Hello
+  
 </div>
 
 <div class="ui middle aligned center aligned grid">
-  <button class="ui inverted massive violet icon button" id="addFitsButton">
+  <a href="camera">
+  <button  type="submit" class="ui inverted massive violet icon button" id="addFitsButton">
     <i class="plus icon"></i>
     Add Fits
   </button>
+  </a>
 </div>
+
+>
