--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -9,6 +9,8 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.css"
     crossorigin="anonymous" />
   <link rel='stylesheet' href='/css/style.css' />
+  <script> src="/public/js/ourscript.js" </script>
+
 </head>
 
 <style>
