--- a/views/mycloset.hbs
+++ b/views/mycloset.hbs
@@ -11,12 +11,12 @@
             <i class="block layout icon"></i>
             My Closet
         </a>
-        <a class="item">
-            <i class="smile icon"></i>
+        <a href="/fits" class="item">
+            <i class=" theme icon"></i>
             Fits
         </a>
         <a href="/celebfits" class="item">
-            <i class="fits"></i>
+            <i class="diamond icon" class="fits"></i>
             Celeb Fits
         </a>
     </div>
