--- a/views/home.hbs
+++ b/views/home.hbs
@@ -21,9 +21,9 @@
   
 </div>
 
-<div class="ui middle aligned center aligned grid">
+<div class="ui middle aligned center aligned grid" id="addFitsButton">
   <a href="camera">
-  <button  type="submit" class="ui inverted massive violet icon button" id="addFitsButton">
+  <button  type="submit" class="ui inverted massive violet icon button" id="buttonsize">
     <i class="plus icon"></i>
     Add Fits
   </button>
