--- a/views/home.hbs
+++ b/views/home.hbs
@@ -2,10 +2,6 @@
   <a class="item">
     <img id="home_logo" class="center" src="img/image.png" height: "20px" width:"20px">
   </a>
-  <a href="/home" class="item">
-    <i class="home icon"></i>
-    Home
-  </a>
   <a href = "/mycloset"class="item">
     <i class="block layout icon"></i>
     My Closet
@@ -18,9 +14,9 @@
     <i class="diamond icon" class="fits"></i>
     Celeb Fits
   </a>
-  
+<script>let user = window.location.search</script>
 </div>
-
+<h1>Welcome</h1>
 <div class="ui middle aligned center aligned grid">
   <a href="camera">
   <button  type="submit" class="ui inverted massive violet icon button" id="addFitsButton">
@@ -29,5 +25,5 @@
   </button>
   </a>
 </div>
+<h1 style="text-align: center"> Hello {{user}} </h1>
 
->
