--- a/views/mycloset.hbs
+++ b/views/mycloset.hbs
@@ -3,7 +3,7 @@
         <a class="item">
             <img id="home_logo" class="center" src="img/image.png" height: "20px" width:"20px">
         </a>
-       
+
         <a class="item">
             <i class="block layout icon"></i>
             My Closet
@@ -18,6 +18,30 @@
         </a>
     </div>
     <div id="content">
-        <h1>My Closet</h1>
+        <h1><font size="8">My Closet</font></h1>
+    </div>
+    <div class="ui three column divided padded grid" id="clothesColumn">
+        <div class="row">
+            <div class="column">
+                <img src="img/redtshirt.jpg" alt="Red T-Shirt">
+            </div>
+            <div class="column">
+                <img src="img/bluejeans.jpeg" alt="Blue Jeans">
+            </div>
+            <div class="column">
+                <img src="img/blackvans.jpeg" alt="Black Vans">
+            </div>
+        </div>
+        <div class="row">
+            <div class="column">
+                <img src="img/bluegucci.jpg" alt="Blue Gucci Shirt">
+            </div>
+            <div class="column">
+                <img src="img/whitejeans.jpg" alt="White Jeans">
+            </div>
+            <div class="column">
+                <img src="img/whiteshoes.jpg" alt="White Shoes">
+            </div>
+        </div>
     </div>
 </div>
