--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,4 +1,4 @@
-<div id="sidebar" class="ui purple left demo vertical inverted visible  sidebar labeled icon menu">
+<div id="sidebar" class="ui violet left demo vertical inverted visible  sidebar labeled icon menu">
   <a class="item">
     <img id="home_logo" class="center" src="img/image.png" height: "20px" width:"20px">
   </a>
