--- a/views/fits.hbs
+++ b/views/fits.hbs
@@ -1,5 +1,5 @@
 {{{body}}}
-<div id = "sidebar" class="ui left demo vertical inverted visible  sidebar labeled icon menu">
+<div id = "sidebar" class="ui red left demo vertical inverted visible  sidebar labeled icon menu">
   <a class="item">
     <img id="home_logo" class="center" src="img/image.png" height: "20px" width:"20px">
   </a>
