--- a/views/celebfits.hbs
+++ b/views/celebfits.hbs
@@ -1,5 +1,5 @@
 <body id="celebpage">
-    <div id="sidebar" class="ui left demo vertical inverted visible  sidebar labeled icon menu">
+    <div id="sidebar" class="ui orange left demo vertical inverted visible  sidebar labeled icon menu">
         <a class="item">
             <img id="home_logo" class="center" src="img/image.png" height: "20px" width:"20px">
         </a>
@@ -38,7 +38,7 @@
                 <img src="img/jean.png" alt="Jeans" height="15%" width="15%">
                 <p>Jeans: $19.99 (use marker to make edits to jeans)</p>
                 <img src="img/burberry.png" alt="Burberry" height="15%" width="15%">
-                <p>Burberry Long Shirt: $395</p>
+                <p>Burberry Long Shirt: $395 (Shirt in photo)</p>
             </div>
             <div id="rightside">
                 <img src="img/hoodie.png" alt="White Hoodie" height="15%" width="15%">
