--- a/views/register.hbs
+++ b/views/register.hbs
@@ -1,5 +1,4 @@
 <body>
-    <header class="ui centered header">Join the Legion of Drip</header>
     <img class="ui centered medium image" src="/img/image.png">
     <div class="ui hidden divider"></div>
     <div class="ui middle aligned center aligned three column grid">
@@ -9,18 +8,18 @@
                     Register
                 </div>
             </h2>
-            <form class="ui large form" action="/home" method="post">
+            <form class="ui large form" action="/users/register" method="post">
                 <div class="ui segment">
                     <div class="field">
                         <div class="ui left icon input">
                             <i class="user icon"></i>
-                            <input type="text" name="email" placeholder="email">
+                            <input type="text" name="email" placeholder="your email">
                         </div>
                     </div>
                     <div class="field">
                         <div class="ui left icon input">
                             <i class="user icon"></i>
-                            <input type="text" name="username" placeholder="username">
+                            <input type="text" name="name" placeholder="your name">
                         </div>
                     </div>
                     <div class="field">
