--- a/views/fits.hbs
+++ b/views/fits.hbs
@@ -1,4 +1,4 @@
-{{{body}}}
+{{log outfits}}
 <div id = "sidebar" class="ui left demo vertical inverted visible  sidebar labeled icon menu">
   <a class="item">
     <img id="home_logo" class="center" src="img/image.png" height: "20px" width:"20px">
@@ -21,3 +21,42 @@
   </a>
 </div>
 
+
+<div class="ui container">
+{{#each outfits}}
+<div class="ui three column grid">
+  <div class="row">
+    <div class="ui fluid card">
+      <div class="image">
+        <img class="fit-image" src="/img/{{this.shirt.image}}">
+      </div>
+      <div class="content">
+        <a class="header">{{this.shirt.name}}</a>
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="ui fluid card">
+      <div class="image">
+        <img class="fit-image" src="/img/{{this.pants.image}}">
+      </div>
+      <div class="content">
+        <a class="header">{{this.pants.name}}</a>
+      </div>
+    </div>
+
+  </div>
+  <div class="row">
+    <div class="ui fluid card">
+      <div class="image">
+        <img class="fit-image" src="/img/{{this.shoes.image}}">
+      </div>
+      <div class="content">
+        <a class="header">{{this.shoes.name}}</a>
+      </div>
+    </div>
+
+  </div>
+</div>
+{{/each}}
+</div>
