--- a/views/celebfits.hbs
+++ b/views/celebfits.hbs
@@ -32,19 +32,19 @@
         <div id="clothing">
             <div id="leftside">
                 <img src="img/striped.png" alt="Striped Shirt" height="15%" width="15%">
-                <p>Black and White Striped Cotton Shirt: $8.99</p>
+                <p>Black and White Striped Cotton Shirt: $8.99(H&M)</p>
                 <img src="img/whitetee.png" alt="White Tee" height="15%" width="15%">
-                <p>White T-Shirt: $6.99</p>
+                <p>White T-Shirt: $6.99(H&M)</p>
                 <img src="img/jean.png" alt="Jeans" height="15%" width="15%">
-                <p>Jeans: $19.99 (use marker to make edits to jeans)</p>
+                <p>Jeans: $19.99(H&M) (use marker to make edits to jeans)</p>
                 <img src="img/burberry.png" alt="Burberry" height="15%" width="15%">
                 <p>Burberry Long Shirt: $395 (Shirt in photo)</p>
             </div>
             <div id="rightside">
                 <img src="img/hoodie.png" alt="White Hoodie" height="15%" width="15%">
-                <p>White Hoodie: $24.99</p>
+                <p>White Hoodie: $24.99(H&M)</p>
                 <img src="img/joggers.png" alt="Jeans" height="15%" width="15%">
-                <p>Joggers: $14.98</p>
+                <p>Joggers: $14.98(Fashion Nova)</p>
             </div>
         </div>
     </div>
