--- a/views/fits.hbs
+++ b/views/fits.hbs
@@ -1,12 +1,12 @@
 {{log outfits}}
-<div id = "sidebar" class="ui left demo vertical inverted visible  sidebar labeled icon menu">
+<div id="sidebar" class="ui left demo vertical inverted visible  sidebar labeled icon menu">
   <a class="item">
     <img id="home_logo" class="center" src="img/image.png" height: "20px" width:"20px">
   </a>
   <a href="/home" class="item">
-            <i class="home icon"></i>
-            Home
-        </a>
+    <i class="home icon"></i>
+    Home
+  </a>
   <a href="/mycloset" class="item">
     <i class="block layout icon"></i>
     My Closet
@@ -15,48 +15,37 @@
     <i class="theme icon"></i>
     Fits
   </a>
-  <a href="/celebfits"class="item">
+  <a href="/celebfits" class="item">
     <i class="diamond icon" class="fits"></i>
     Celeb Fits
   </a>
 </div>
 
-
-<div class="ui container">
-{{#each outfits}}
-<div class="ui three column grid">
-  <div class="row">
-    <div class="ui fluid card">
-      <div class="image">
-        <img class="fit-image" src="/img/{{this.shirt.image}}">
+<h1 id="FitsTitle"><font size="8">Fits</font></h1>
+<div id="dafits" class="ui container">
+  {{#each outfits}}
+  <div id="eachcolumn" class="ui three column grid">
+    <div id="eachrow" class="row">
+      <div class="ui fluid card">
+        <div class="image">
+          <img class="fit-image" src="/img/{{this.shirt.image}}">
+        </div>
       </div>
-      <div class="content">
-        <a class="header">{{this.shirt.name}}</a>
+    </div>
+    <div id="eachrow"class="row">
+      <div class="ui fluid card">
+        <div class="image">
+          <img class="fit-image" src="/img/{{this.pants.image}}">
+        </div>
+      </div>
+    </div>
+    <div id="eachrow" class="row">
+      <div class="ui fluid card">
+        <div class="image">
+          <img class="fit-image" src="/img/{{this.shoes.image}}">
+        </div>
       </div>
     </div>
   </div>
-  <div class="row">
-    <div class="ui fluid card">
-      <div class="image">
-        <img class="fit-image" src="/img/{{this.pants.image}}">
-      </div>
-      <div class="content">
-        <a class="header">{{this.pants.name}}</a>
-      </div>
-    </div>
-
-  </div>
-  <div class="row">
-    <div class="ui fluid card">
-      <div class="image">
-        <img class="fit-image" src="/img/{{this.shoes.image}}">
-      </div>
-      <div class="content">
-        <a class="header">{{this.shoes.name}}</a>
-      </div>
-    </div>
-
-  </div>
-</div>
-{{/each}}
+  {{/each}}
 </div>
