--- a/views/camera.hbs
+++ b/views/camera.hbs
@@ -1,6 +1,64 @@
-  <script> src="public/js/ourscript.js" </script>
+<script> src = "js/ourscript.js" </script>
 
-<video id="video" width="640" height="480" autoplay></video>
-<button id="snap">Snap Photo</button>
-<canvas color="black" id="canvas" width="640" height="480"></canvas>
-{{{body}}}
+<div id="sidebar" class="ui left demo vertical inverted visible  sidebar labeled icon menu">
+  <a class="item">
+    <img id="home_logo" class="center" src="img/image.png" height: "20px" width:"20px">
+  </a>
+  <a href="/home" class="item">
+    <i class="home icon"></i>
+    Home
+  </a>
+  <a href="/mycloset" class="item">
+    <i class="block layout icon"></i>
+    My Closet
+  </a>
+  <a href="/fits" class="item">
+    <i class="theme icon"></i>
+    Fits
+  </a>
+  <a href="/celebfits" class="item">
+    <i class="diamond icon" class="fits"></i>
+    Celeb Fits
+  </a>
+</div>
+
+<link rel="stylesheet" href="assets/demo.css">
+
+  <script src=".../build/tracking-min.js"></script>
+   <script src=".../node_modules/dat.gui/build/dat.gui.min.js"></script>
+  <script src="tracking/assets/stats.min.js"></script>
+  <script src="tracking/assets/color_camera_gui.js"></script>
+
+  <style>
+  .demo-container {
+    background-color: black;
+  }
+  video, canvas {
+    position: absolute;
+  }
+  </style>
+<link rel="stylesheet" href="styles.css">
+    <script src="tracking-min.js"></script>
+    <script src="script.js"></script>
+\
+    <div class="display">
+      <video id="webcam" width="640" height="480" autoplay></video>
+      <canvas id="canvas" width="640" height="480"></canvas>
+    </div>
+
+    <div class="ui">
+
+      <div class="controls">
+
+        <p>Click on the webcam feed to pick a color, then adjust tolerance.</p>
+
+        <div>
+          <label for="tolerance">Tolerance:</label>
+          <input id="tolerance" type="range" value="10" max="255" min="0" step="1">
+        </div>
+
+      </div>
+
+      <div id="color"></div>
+
+    </div>
