--- a/views/celebfits.hbs
+++ b/views/celebfits.hbs
@@ -19,6 +19,11 @@
             <i class="diamond icon" class="fits"></i>
             Celeb Fits
         </a>
+        <a href="/logout" class="item">
+            <i class="sign out alternate icon"></i>
+            Logout
+        </a>
+    </div>
     </div>
     <div id="names">
         <h1>A$VP Rocky</h1>
