--- a/views/fits.hbs
+++ b/views/fits.hbs
@@ -20,6 +20,11 @@
     Celeb Fits
   </a>
 </div>
+ <a href="/logout" class="item">
+    <i class="sign out alternate icon" ></i>
+    Logout
+  </a>
+</div>
 
 <h1 id="FitsTitle"><font size="8">Fits</font></h1>
 <div id="dafits" class="ui container">
