--- a/views/camera.hbs
+++ b/views/camera.hbs
@@ -1,5 +1,5 @@
 
-
+<script src="public/js/script.js"></script>
 <div id="sidebar" class="ui left demo vertical inverted visible  sidebar labeled icon menu">
   <a class="item">
     <img id="home_logo" class="center" src="img/image.png" height: "20px" width:"20px">
@@ -24,9 +24,7 @@
 
 <video autoplay></video>
 
-<script>
-  ///////////////////////////////////////////////////////////(Shout out Eric Bidelman)
-  function hasGetUserMedia() {
+<script>  function hasGetUserMedia() {
   return !!(navigator.mediaDevices &&
     navigator.mediaDevices.getUserMedia);
 }
@@ -44,8 +42,8 @@ navigator.mediaDevices.getUserMedia(constraints).
 } else {
   alert('getUserMedia() is not supported by your browser');
 }
-
 </script>
+
 
  <div class="display">
       <video id="webcam" width="640" height="480" autoplay></video>
