--- a/views/login.hbs
+++ b/views/login.hbs
@@ -11,7 +11,7 @@
         <div class="column">
             <h2 class="ui image header">
                 <div class="content">
-                    Log-in to your account
+                    Login to your account
                 </div>
             </h2>
             <form class="ui large form" action="/users/login" method="post">
