--- a/views/mycloset.hbs
+++ b/views/mycloset.hbs
@@ -20,6 +20,10 @@
             <i class="diamond icon" class="fits"></i>
             Celeb Fits
         </a>
+        <a href="/logout" class="item">
+            <i class="sign out alternate icon"></i>
+            Logout
+        </a>
     </div>
     <div id="content">
         <h1>
