--- a/views/camera.hbs
+++ b/views/camera.hbs
@@ -20,6 +20,10 @@
     <i class="diamond icon" class="fits"></i>
     Celeb Fits
   </a>
+  <a href="/logout" class="item">
+    <i class="sign out alternate icon" ></i>
+    Logout
+  </a>
 </div>
 
 <video autoplay></video>
