anything you left on the laptop

--- a/views/camera.hbs
+++ b/views/camera.hbs
@@ -1,5 +1,5 @@
 
-<script src="public/js/script.js"></script>
+<script src="/js/script.js"></script>
 <div id="sidebar" class="ui left demo vertical inverted visible  sidebar labeled icon menu">
   <a class="item">
     <img id="home_logo" class="center" src="img/image.png" height: "20px" width:"20px">
