--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -9,9 +9,9 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.css"
     crossorigin="anonymous" />
   <link rel='stylesheet' href='/css/style.css' />
-  <script> src = "/public/js/ourscript.js" </script>
-  <script src="tracking-min.js"></script>
-  <script src="public/js/script.js"></script>
+  {{!-- <script> src = "/public/js/ourscript.js" </script> --}}
+  <script src="/js/tracking-min.js"></script>
+  {{!-- <script src="public/js/script.js"></script> --}}
 
 </head>
 
